# conways-game-of-life

./: .gitignore  CMakeLists.txt  README.md  build.sh  copy-src.bat  run.sh  start.sh
game-lib/: CMakeLists.txt  build.sh  run.sh
game-lib-windows/: game-lib-windows.sln
game-lib-windows/Release/: game-lib-windows.lib
game-lib-windows/game-lib-windows/: .gitignore  copy-src.bat  game-lib-windows.cpp  game-lib-windows.vcxproj  game-lib-windows.vcxproj.filters  pch.h
game-lib/src/: game_of_life.cpp  game_of_life.h  main.cpp  region.cpp  region.h  universe.cpp  universe.h
libtest/: CMakeLists.txt  main.cpp  run.sh
sfml-gameoflife/: CMakeLists.txt  run.sh
sfml-gameoflife/src/: main.cpp
sfml_gameoflife_windows/: sfml_gameoflife_windows.sln
sfml_gameoflife_windows/sfml_gameoflife_windows/: game_of_life.cpp  game_of_life.h  region.h  sfml_gameoflife_windows.cpp  sfml_gameoflife_windows.vcxproj  sfml_gameoflife_windows.vcxproj.filters  universe.cpp  universe.h
src/: CMakeLists.txt  concurrent.cpp  concurrent.h  main.cpp  region.cpp  region.h  universe.cpp  universe.h
